fix(ui): alignement champs de recherche offres emploi, job étudiant, alternance et engagement

--- a/src/client/components/features/Engagement/FormulaireRecherche/FormulaireRechercheMissionEngagement.module.scss
+++ b/src/client/components/features/Engagement/FormulaireRecherche/FormulaireRechercheMissionEngagement.module.scss
@@ -39,7 +39,6 @@
   .inputButtonWrapper {
     display: flex;
     width: 100%;
-    align-items: flex-end;
     gap: 1rem;
     flex-wrap: wrap;
     padding-block: 0;
